Thu Oct 14 00:00:18 2021  Jiri (George) Lebl <jirka@5z.com>

	* graphing.c: improve slightly the frozenness of 3d plots, and enable
	  the stop button on the graph window the whole time a script is running.

	* examples/zoom-differentiability.gel: Example of zooming into a
	  differentiable and a nondifferentiable function of two variables

Wed Oct 13 17:41:48 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: allow setting editor color scheme in the
	  gui settings

Wed Oct 13 09:38:06 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.c: Make icons optional (ifdef'ed out), it actually
	  seems to me to look better without.

Wed Oct 13 00:39:40 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.[ch]. src/graphing.[ch]: Remove use of amtk and
	  actually simplify the code in the process.  Also fix an inadvertant
	  API break for plugins (though there are no extant plugins as
	  far as I know).  Add Save toolbar item, fix window delete to act
	  like the quit button

	* configure.ac: remove amtk, raise version

Thu Feb 18 17:20:08 2021  Jiri (George) Lebl <jirka@5z.com>

	* Release 1.0.26

Thu Feb 18 17:20:08 2021  Jiri (George) Lebl <jirka@5z.com>

	* help/update-po.sh,help/update-xml-to-txt-html.sh: port from
	  xml2po to itstool, and run the updates

Fri Feb 12 22:41:31 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/gnome-genius.[ch]: Set default sourceview colorscheme to kate
	  as otherwise it is hard to see in dark mode.  Also allow setting
	  the scheme through config, but so far no gui for it.

Thu Jan 07 17:20:30 2021  Jiri (George) Lebl <jirka@5z.com>

	* src/mpwrap.c, src/lexer.l, src/compil.c: Check for errors whenn
	  setting integer and reject the parse.

Wed Dec 16 13:53:33 2020  Jiri (George) Lebl <jirka@5z.com>

	* src/genius-readline-helper.c: fix warning by using the right list
	  free function

Wed Dec 16 11:52:11 2020  Jiri (George) Lebl <jirka@5z.com>
