@@ -3,6 +3,8 @@ Changes to 1.0.27
 * Add Save button to toolbar
 * Allow setting editor color scheme in the settings dialog
 * Closing window acts exactly like the quit button/menu item
+* Current program is marked with larger font instead of bold, since that
+  doesn't work with all themes.
 * Remove menu icons
 * Leave the Stop button on the plot window enabled if a script is running
 
