@@ -1,3 +1,11 @@
+Thu Oct 14 01:12:53 2021  Jiri (George) Lebl <jirka@5z.com>
+
+	* src/gnome-genius.c: Fix unsetting the stop button on script end,
+	  fix current program marking.
+
+	* src/graphing.c: Fix a couple of possible crashes when resetting
+	  variable names.
+
 Thu Oct 14 00:00:18 2021  Jiri (George) Lebl <jirka@5z.com>
 
 	* graphing.c: improve slightly the frozenness of 3d plots, and enable
